--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <h2>I'm a Web Developer</h2>
   <hr />
   <h3><a href="movie-ranking.html">Movie Ranking Project</a></h3>
-  <img src="../movie-ranking.png" height="200" alt="movie ranking project preview"/>
+  <img src="movie-ranking.png" height="200" alt="movie ranking project preview"/>
   <h3><a href="birthday-invite.html">Birthday Invite Project</a></h3>
-  <img src="../birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  <img src="birthday-invite.png" height="200" alt="birthday invite project preview"/>
   <hr />
   <a href="about.html">About Me</a>
   <a href="contact.html">Contact Me</a>
